[package]
name = "fs_usage_sys"
version = "0.1.3"
edition = "2021"
authors = ["Madhava Jay <me@madhavajay.com>"]
description = "A Rust wrapper for macOS fs_usage to monitor file system events with advanced filtering"
license = "MIT"
repository = "https://github.com/madhavajay/fs_usage_sys"
homepage = "https://github.com/madhavajay/fs_usage_sys"
documentation = "https://docs.rs/fs_usage_sys"
readme = "README.md"
keywords = ["filesystem", "monitoring", "macos", "fs-usage", "file-watcher"]
categories = ["filesystem", "os::macos-apis", "development-tools"]
exclude = [".github/", "target/", "Cargo.lock", "*.log", "*.pid", "*.seed", "*.swp"]

[dependencies]
anyhow = "1.0"
glob = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
crossbeam-channel = "0.5"
tracing = "0.1"
tracing-subscriber = "0.3"

[dev-dependencies]
tempfile = "3.9"
ctrlc = "3.4"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[[example]]
name = "basic_monitor"
path = "examples/basic_monitor.rs"

[[example]]
name = "process_filter"
path = "examples/process_filter.rs"

[[example]]
name = "debug_monitor"
path = "examples/debug_monitor.rs"

[[example]]
name = "writes_only"
path = "examples/writes_only.rs"